--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.4",
     "tailwindcss": "^3.2.0",
     "tesseract.js": "^4.0.0"
